# ecommerce-market-agent

./: .env.example  Dockerfile  README.md  docker-compose.yml  project-structure.md  pyproject.toml
examples/: api_requests.http  example_html_report.html  example_json_report.json
src/market_agent/: config.py  main.py
src/market_agent/agent/: graph.py  prompts.py
src/market_agent/api/: models.py  routes.py
src/market_agent/tools/: base_tool.py  market_trend.py  report_generator.py  sentiment_analyzer.py  web_scraper.py
tests/agent/: test_graph.py
tests/api/: test_routes.py
tests/tools/: test_market_trend.py  test_report_generator.py  test_sentiment_analyzer.py  test_web_scrapper.py
