[project]
name = "ecommerce-market-agent"
version = "0.1.0"
description = "E-commerce Market Intelligence Agent using LangGraph and LangChain"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "httpx",
    "plotly",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/market_agent --cov-report=term-missing"

[tool.coverage.run]
source = ["src/market_agent"]
omit = ["*/__init__.py"]

[tool.ruff]
target-version = "py313"
line-length = 120